ensure tables have a border (this GREATLY improves readability in text-mode web browsers)

--- a/input/styles/screen.css
+++ b/input/styles/screen.css
@@ -381,6 +381,11 @@
 
 /* tables */
 
+  table
+  {
+    border           : none;
+  }
+
   th,
   td
   {
